theme/totara/styles_totara.css
/* ... */
table.borderless td {
    border-color: #ffffff;
    vertical-align: top;
}

body#hierarchy-index table#competency tr.r0 td.customfield {
    background: #fdfdfd;
}

body#hierarchy-index table#competency tr.r1 td.customfield {
    background: #f2f2f2;
}


/*****************************************************************************/
/** Guides Tables **/
/*****************************************************************************/

#guides-index .r1{
	background: #F5F5F5;
}

/*****************************************************************************/
/** Form **/
/*****************************************************************************/

form#newfieldform {
    padding:10px 0 0;
    display: table;
}

/*****************************************************************************/
/** Guide Steps **/
/*****************************************************************************/

.guidesteps {
    clear: left;
    height: 100%;
	padding-top: 10px;
}

.guidestep {
	border: 1px solid #EEEEEE;
	word-wrap: break-word;
}

.guidestepcontainer {
    float: left;
    width: 25%;
    height: 100%;
}

.guidesteptitle {
	border-bottom: none;
	padding: 5px;
}

/* Complete */

h2.guidesteptitle.complete {
	background: #D0E4EF;
	color: #2970A6;
}
.guidestep.complete .stepstatus {
	background: #D0E4EF;
	color:#2970A6;
	text-align:center;
	text-transform:uppercase;
	font-weight: bold;
}

.guidestep.inactive.complete {
	border-color: #d0e4ef;
}

/* Incomplete */

h2.guidesteptitle.pending {
    background-color: #FAFAFA;
	color: #999999;
}

.guidestep.incomplete .stepstatus {
	background:none repeat scroll 0 0 #FAFAFA;
	color:#999999;
	text-align:center;
	text-transform:uppercase;
}

/* Active */
.guidestep.active .stepstatus {
	background:none repeat scroll 0 0 #EFFAF3;
	color:#3E8F56;
	text-align:center;
	text-transform:uppercase;
}

.guidestep.active {
	border: 1px solid #D9F3E1;
}

.guidestep.active .stepstatusimg input {
    border: 1px solid #EFF8EF;
    background: #D9F3E1;
}

h2.guidesteptitle.active {
	background: #D9F3E1;
	color: #3E8F56;
}

/* Inactive */
.guidestep.inactive.incomplete div.guidesteptext p{
	color: #999999;
}

/*****/

img.percentImage {
 background: white url(/guides/percentImage_back.png) top left no-repeat;
 padding: 0;
 margin: 5px 0 0 0;
 background-position: 1px 0;
}

.guideindextitle {
    font-weight:bold;
}

/* Guide Block */
.block_guides .content ul.list  li {
    line-height: 1.1em;
    padding-bottom: 0px;
}


/*****************************************************************************/
/** Course and Category **/
/*****************************************************************************/

.course_icon {
    padding-right: 5px;
    vertical-align: middle;
}

#course-view .section td.content {
    background-color: #fff;
}

#switchrole_jump {
    margin-right: 5px;
}

#course-view .format-demo .section td.format-demo-content {
    background-color: transparent;
    border: none;
    padding: 0;
}


/*****************************************************************************/
/** Scheduled Reports **/
/*****************************************************************************/
table.scheduled-reports {
    width: 100%;
}

table.scheduled-reports .options {
    text-align: center;
    width: 45px;
}

.scheduled-reports tr td {
    padding: 5px 10px;
}

.scheduled-reports tr th {
    padding: 5px 10px;
}

img.iconhelp {
    width: 16px;
    height: 16px;
}

td.user_namewithlinks span.username {
    font-size: 1.3em;
}

td.user_namewithlinks div.picture {
    float:left;
    padding-right:4px;
}

td.user_namewithlinks div.links {
    white-space:nowrap;
}

td.user_namewithlinks {
    width:225px;
}

